--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -126,31 +126,35 @@
             <div class="media-container-row">
                     <div class="toggle-content">
                         <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-5"><strong>Student of the Week&nbsp;</strong><strong>Award of Excellence</strong><br></h2>
-                        <h3 class="mbr-section-subtitle align-left mbr-fonts-style display-7"><div>Congratulations to this week’s recipient, Georgia McDowell!&nbsp;</div></h3>
+                        <h3 class="mbr-section-subtitle align-left mbr-fonts-style display-7"><div>Congratulations to this week’s recipient, Grace Ollinger</div></h3>
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_126" aria-expanded="false" aria-controls="collapse1">
-                                        <h4 class="mbr-fonts-style display-7">About Georgia</h4>
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_56" aria-expanded="false" aria-controls="collapse1">
+                                        <h4 class="mbr-fonts-style display-7">About Grace</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_56" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
-                                        <p class="mbr-fonts-style panel-text display-7">Georgia is a junior at Jonesville High School. She is co-captain of the JHS Robotics Team. At the events, she typically serves as the ‘human player’ and interacts with the game/field pieces for the team’s alliances.
-<br><br>As a team captain, her teammates rely on Georgia for her organizational planning, her writing skills, and her knowledge of wiring.
-<br><br>In addition to her service on the Robotics Team, Georgia volunteers at the Hillsdale County Humane Society, on the North Country Trail. She also helps to teach gymnastics and cheer to younger kids at the Hillsdale Gymnastics Center.
-<br><br>Congratulations, Georgia!
-<br><br>Keep up your great work.&nbsp;<br></p>
+                                        <p class="mbr-fonts-style panel-text display-7">Grace is a senior at Hillsdale High School. She is also an avid musician and plays trumpet for the Jazz Band, Symphonic Band, Marching Band, and Pep Band. Grace plays drums and bass guitar at her church’s Worship Band. She remains active in National Honor Society and Business Professionals of America. Grace is co-captain for the HHS Varsity Girls’ Tennis Team. She is also dual-enrolled at Jackson College.
+<br>
+<br>According to HHS Band teacher, Dr. Rushing, ‘Grace is not looking for recognition. She wants to help and is behind the scenes working and helping others. Grace is an excellent student, athlete, and musician.’
+<br>
+<br>Following graduation, Grace plans to attend Huntington University to study animal science.
+<br>
+<br>Congratulations, Grace!
+<br>
+<br>Keep up your great work.<br></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_126" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_56" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_56" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">At Barrett Insurance we believe education is critical. To show this commitment to education, we developed the Barrett Insurance "Student of the Week Award of Excellence." This award started in the fall of 2015 to honor our local students. We continue to highlight and feature select students from around the region to showcase their scholastic acumen and their impressive achievements. 
 <br>
@@ -162,11 +166,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_126" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_56" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Past Recipients</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_56" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7"><strong>(in alphabetical order by first name)</strong> 
 <br>
@@ -178,8 +182,8 @@
 <br>Cecilia Mende 
 <br>Dale Wagner <br>
 Gabe Healy <br>
-Georgia McDowell<br>Grace Gadwood 
-<br>Gracie Cook&nbsp;<br>Hanna Korn&nbsp;<br>Hayley Sims <br>Jacob Hart 
+Georgia McDowell<br>Grace Gadwood <br>
+Grace Ollinger<br>Gracie Cook&nbsp;<br>Hanna Korn&nbsp;<br>Hayley Sims <br>Jacob Hart 
 <br>Jacob Scoville 
 <br>Jay Close <br>
 Joey Weidmayer<br>John Nolan <br>Julia Haire&nbsp;<br>
@@ -208,11 +212,11 @@ Michael Rhoades<br>Olivia Bambacht
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_126" aria-expanded="false" aria-controls="collapse4">
+                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_56" aria-expanded="false" aria-controls="collapse4">
                                         <h4 class="mbr-fonts-style display-7">Participating Schools</h4>
                                     </a>
                                 </div>
-                                <div id="collapse4_126" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse4_56" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Camden-Frontier, 
 <br>Jonesville 
@@ -227,8 +231,8 @@ Waldron<br>Will Carleton Academy</p>
                             
                         </div>
                     </div>
-                <div class="mbr-figure" style="width: 45%;">
-                     <img src="assets/images/sowae-georgia-mcdowell-546x683.jpg" alt="Mobirise" title="">
+                <div class="mbr-figure" style="width: 36%;">
+                     <img src="assets/images/47571864-2314462965290978-6189144712163622912-n-590x886.jpg" alt="Mobirise" title="">
                 </div>
             </div>
         </div>
@@ -247,11 +251,11 @@ Waldron<br>Will Carleton Academy</p>
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_127" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_57" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_57" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">The Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project brings together local youth and adults to document Michigan's traditional barn structures. We want to increase youth awareness of the rich agricultural history of the area and preserve it for generations to come.<br><br>Barrett Insurance is working on this survey in conjunction with the Michigan Barn Preservation Network and Michigan State University. The survey will be available at the Michigan State University Museum. &nbsp;<br></p>
                                     </div>
@@ -259,11 +263,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_127" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_57" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">Seeking Partners</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_57" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Barrett Insurance needs your help. If you are willing to drive around, commit to surveying a one square mile area from the comfort of your vehicle and completing our specially designed ‘windshield survey,' (which allows us to documents barns and farmsteads without entering private property) then give us a call today to find out how you can help preserve these undocumented treasures and the legacy of our area.
 <br>
@@ -273,11 +277,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_127" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_57" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Get Involved</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_127" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_57" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">If you would like to get involved with the Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project, call Barrett Insurance at (517) 849-1000.</p>
                                     </div>
