--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QRPEZj54NrQ2HjeBzJ3OO7btGfZ73kzRBpo5xdLdEjo4aKHsz5rBNbZ1I+Dqst/fLwV3fvDzMaAeGdVaMyYlIFt7vbe0AmwFet28otR2kw6KTBDpC0egLNq89WrqT+k9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6hvHOxhhB+D1F/LbmaxpQQMS28ycw0VdIljavvhq67JVePTPYs0EnnWJklml9fgJQBNnJf9XoUT9pIooM+ETvB14t9YE4p2ynv1mS8kwvOfAhPGzhi/dzPh9EG86svGP">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
