--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6hvHOxhhB+D1F/LbmaxpQQMS28ycw0VdIljavvhq67JVePTPYs0EnnWJklml9fgJQBNnJf9XoUT9pIooM+ETvB14t9YE4p2ynv1mS8kwvOfAhPGzhi/dzPh9EG86svGP">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="h+5qVcmhG0YGzYZb3BvCbh2536rdIpPkVVgymVx+9l6zOpUZ4uS3RZIZc23lJkdFMx3+4vnqP8exhAalu0bAWP3M0Ll1UHrR8n5z1tLSSolrNg/C40nDZ3Ybc/hXMtpA">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
